// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link passes props to subcomponents 1`] = `
<mockConstructor
  onClick={[Function]}
  to="/bar"
>
  my link
</mockConstructor>
`;

exports[`Link renders external links as expected (e.g. target blank) 1`] = `
<a
  href="http://example.com"
  rel="noopener"
  target="_blank"
>
  my link
</a>
`;

exports[`Link renders internal links 1`] = `
<mockConstructor
  to="/foo"
>
  my link
</mockConstructor>
`;
